Create css folder with main.css.  Add basic styles to CSS file

--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 	<head>
 		<title>Google</title>
 
+		<link rel="stylesheet" type="css/text" href="css/main.css">
+
 	</head>
 
 	<body>
+		<header>
+			<ul>
+				<li>Jason</li>
+				<li>Gmail</li>
+				<li>Images</li>
+
+
+
+
+			</ul>
+
+		</header>
+
+
+		<input type="text">
 	</body>	
 </html>
