--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
 		</header>
 
 
-		<input type="text">
+
+		
+
+		<div id="searchBox">
+			
+			<img id="logo" src="images/googlelogo_color_272x92dp.png">
+
+
+
+
+
+		</div>
+
+		<div id="searchText">
+
+			<input type="text">
+		</div>
+
+
+	
+
 	</body>	
 </html>
