--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 			<input type="text">
 		</div>
 
+		<div id="buttons">
+			<button type="button">Google Search</button><button type="button">I'm Feeling Lucky</button>
+		</div>	
+
 
 	
 
