Add footer, project complete.  May need to adjust styling a bit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<header>
-			<ul>
+			<ul class="navStyle">
 				<li>Jason</li>
 				<li>Gmail</li>
 				<li>Images</li>
@@ -44,6 +44,20 @@
 			<button type="button">Google Search</button><button type="button">I'm Feeling Lucky</button>
 		</div>	
 
+
+		<footer>
+			<ul class="navStyle">
+				<li>Advertising</li>
+				<li>Business</li>
+				<li>About</li>	
+			</ul>
+
+			<ul class="navStyle" id="privacy">
+				<li>Privacy</li>
+				<li>Terms</li>
+				<li>Settings</li>
+			</ul>
+		</footer>
 
 	
 
