Add mic image into to text box and add styles to the css file to place it in the box correctly

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
 		<div id="searchText">
 
-			<input type="text">
+			<input id="searchTextBox" type="text">
+			
 		</div>
 
 		<div id="buttons">
